@@ -1,3 +1,13 @@
+Wed Sep 25 17:58:03 2002  Jeff Parsons <parsons@cs.wustl.edu>
+
+        * TAO_IDL/be/be_visitor_field/field_ch.cpp:
+
+	  Added missing generated newlines for anonymous array members.
+
+	* TAO_IDL/be/be_visitor_structure/structure_ch.cpp:
+
+	  Removed extra generated newlines.
+
 Wed Sep 25 17:12:06 2002  Jeff Parsons <parsons@cs.wustl.edu>
 
         * tests/IDL_Test/keywords.idl:
